--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -76,11 +76,11 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
+/*@media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
-   */
+   
 
   body {
     --ion-color-primary: #428cff;
@@ -150,7 +150,6 @@ http://ionicframework.com/docs/theming/ */
   /*
    * iOS Dark Theme
    * -------------------------------------------
-   */
 
   .ios body {
     --ion-background-color: #000000;
@@ -194,7 +193,6 @@ http://ionicframework.com/docs/theming/ */
   /*
    * Material Design Dark Theme
    * -------------------------------------------
-   */
 
   .md body {
     --ion-background-color: #121212;
@@ -233,4 +231,14 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-card-background: #1e1e1e;
   }
+  
+}
+*/
+
+ion-content{
+	--background: #f2f2f2 !important;
+}
+
+.text-center{
+	text-align: center;
 }
