--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -54,10 +54,11 @@
 }
 
 .icon-next{
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 20px;
     width: 70px;
+    z-index: 2;
 }
 
 .img-result{
@@ -65,4 +66,34 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.content-date{
+    position: absolute;
+    padding: 10px;
+    text-align: center;
+    border-radius: 100%;
+    height: 120px;
+    width: 120px;
+    z-index: 1001;
+    top: -3px;
+    left: -10px;
+}
+
+.content-result{
+    z-index: 1;
+    border-radius: 30px 0px 0px 30px;
+}
+
+.state{
+    background-color: #08C21A;
+    color: white;
+    border-radius: 15px;
+    width: 50%;
+    text-align: center;
+    margin-top: -10px;
+}
+
+.profession{
+    margin-top: -10px;  
 }
